BaSP-W02-2022: Footer done

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -8,66 +8,77 @@
     <meta name="author" content="Cristian Gerster" />
     <meta name="keywords" content="employee, work, reports, hours log, roles, Resource, leadership, team, management,
      traceability, Productivity, Booster" />
+     <script src="https://kit.fontawesome.com/d7c9d962f7.js" crossorigin="anonymous"></script>
     <title>Trackgenix</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <script src="https://kit.fontawesome.com/d7c9d962f7.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/general-style.css">
+    <link rel="stylesheet" type="text/css" href="css/aside-style.css">
+    <link rel="stylesheet" type="text/css" href="css/header-style.css">
+    <link rel="stylesheet" type="text/css" href="css/main-style.css">
+    <link rel="stylesheet" type="text/css" href="css/who-main-style.css">
+    <link rel="stylesheet" type="text/css" href="css/why-main-style.css">
+    <link rel="stylesheet" type="text/css" href="css/func-main-style.css">
+    <link rel="stylesheet" type="text/css" href="css/contact-main-style.css">
+    <link rel="stylesheet" type="text/css" href="css/more-main-style.css">
+    <link rel="stylesheet" type="text/css" href="css/footer-style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
-
 <body>
     <aside>
-        <div id="upperaside">
+        <div id="upper-aside">
             <img src="assets/LOGO trackgenix.png" alt="Logo Trackgenix">
             <h2>Trackgenix</h2>
-            <img id="arrow" src="assets/Icons/sidebar arrow.png" alt="arrow sidebar">
+            <i class="fa-solid fa-angle-left fa-xl"></i>
         </div>
-        <div id="optionsidebar">
+        <div id="option-aside">
             <div class="menu-option">
                 <a href="">
                     <i class="fa-solid fa-house fa-lg"></i>
-                    <h3 class="side-text">Home</h3>
+                    <h3 class="text-aside">Home</h3>
                 </a>
             </div>
             <div class="menu-option">
                 <a href="">
                     <i class="fa-solid fa-user fa-lg"></i>
-                    <h3 class="side-text">SignUp</h3>
+                    <h3 class="text-aside">SignUp</h3>
                 </a>
             </div>
             <div class="menu-option">
                 <a href="">
                     <i class="fa-solid fa-user fa-lg"></i>
-                    <h3 class="side-text">LogIn</h3>
+                    <h3 class="text-aside">LogIn</h3>
                 </a>
             </div>
         </div>
-        <div id="contactsidebar">
+        <div id="contact-aside">
             <h3>Contact Us</h3>
-            <div class="lineorange"></div>
+            <div class="line-orange"></div>
             <div class="contact-option">
                 <a href="https://mail.google.com" target="_blank">
                     <i class="fa-regular fa-envelope fa-xl"></i>
-                    <p class="side-text">trackgenix@gmail.com</p>
+                    <p class="text-aside">trackgenix@gmail.com</p>
                 </a>
             </div>
             <div class="contact-option">
                 <a href="">
                     <i class="fa-solid fa-phone fa-xl"></i>
-                    <p class="side-text">(000) 000-0000</p>
+                    <p class="text-aside">(000) 000-0000</p>
                 </a>
             </div>
             <div class="contact-option">
                 <a href="">
                     <i id="location-icon" class="fa-solid fa-location-dot fa-xl""></i>
-                    <p class=" side-text">1234 Somewhere Road #8254 Nashville, TN 00000-0000</p>
+                    <p class="text-aside">1234 Somewhere Road #8254 Nashville, TN 00000-0000</p>
                 </a>
             </div>
         </div>
     </aside>
     <header>
-        <div id="textheader">
+        <div id="text-header">
             <h1>Trackgenix</h1>
-            <div class="linegreen"></div>
+            <div class="line-green"></div>
             <h2>By GigaTech Software Solutions SA</h2>
             <p>
                 "The company GigaTech Software Solutions SA provides software development services to other companies,
@@ -83,7 +94,7 @@
     <main>
         <section id="who-we-are">
             <h2 class="title">Who We Are</h2>
-            <div class="titlebar"></div>
+            <div class="title-bar"></div>
             <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                 industry's
@@ -104,7 +115,7 @@
                 ever since the 1500s, when
                 an unknown printer took a galley of type and scrambled it to make a type specimen book.
             </p>
-            <p id="textgreen">
+            <p id="text-green">
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                 industry's
                 standard dummy text ever since the 1500s, when
@@ -121,7 +132,7 @@
         <section id="why-choose-us">
             <div id="productivitysection">
                 <h2 class="title">Why choose us?</h2>
-                <div class="titlebar"></div>
+                <div class="title-bar"></div>
                 <div class="text-why-left">
                     <h3 class="title">Productivity Booster</h3>
                     <div class="subtitle-bar"></div>
@@ -186,7 +197,7 @@
         </section>
         <section id="functionalities">
             <h2 class="title">Functionalities</h2>
-            <div class="titlebar"></div>
+            <div class="title-bar"></div>
             <div id="hours-log">
                 <img class="img-functionalities" src="assets/Icons/Hours Log.png" alt="Hours Log">
                 <div class="text-functionalities">
@@ -234,7 +245,7 @@
         </section>
         <section id="contact-form">
             <h2 class="title">Contact</h2>
-            <div class="titlebar"></div>
+            <div class="title-bar"></div>
             <form action="" method="post">
                 <div>
                     <label class="label-contact" for="name">Name</label>
@@ -250,66 +261,44 @@
                 <input type="text" id="email" name="email" placeholder="Your Email Here">
                 <label class="label-contact" for="message">Message</label>
                 <textarea id="message" name="message" placeholder="Your Message Here"></textarea>
-                <button type="submit" id="submitbtn"><i id="email-icon" class="fa-regular fa-envelope fa-sm"></i> Send message</button>
-                <button type="reset" id="resetbtn"><i id="cross-icon" class="fa-solid fa-xmark fa-sm"></i> Reset</button>
+                <button type="submit" id="submitbtn"><i id="email-icon" class="fa-regular fa-envelope fa-sm"></i> Send
+                    message</button>
+                <button type="reset" id="resetbtn"><i id="cross-icon" class="fa-solid fa-xmark fa-sm"></i>
+                    Reset</button>
             </form>
         </section>
         <section id="more-sections">
-            <div id="productsol">
+            <div id="product-ol" class="ol-more-sections">
                 <h5>Products</h5>
                 <ol>
-                    <a href="">
-                        <li>Features</li>
-                    </a>
-                    <a href="">
-                        <li>Downloads</li>
-                    </a>
-                    <a href="">
-                        <li>Integrations</li>
-                    </a>
-                    <a href="">
-                        <li>Additional features</li>
-                    </a>
+                    <li><a href="">Features</a></li>
+                    <li><a href="">Downloads</a></li>
+                    <li><a href="">Integrations</a></li>
+                    <li><a href="">Additional features</a></li>
                 </ol>
             </div>
-            <div id="enterpriseol">
+            <div id="enterprise-ol" class="ol-more-sections">
                 <h5>Enterprise</h5>
                 <ol>
-                    <a href="">
-                        <li>About us</li>
-                    </a>
-                    <a href="">
-                        <li>Clients</li>
-                    </a>
-                    <a href="">
-                        <li>Resources</li>
-                    </a>
-                    <a href="">
-                        <li>Blog</li>
-                    </a>
+                    <li><a href="">About us</a></li>
+                    <li><a href="">Clients</a></li>
+                    <li><a href="">Resources</a></li>
+                    <li><a href="">Blog</a></li>
                 </ol>
             </div>
-            <div id="supportol">
+            <div id="support-ol" class="ol-more-sections">
                 <h5>Support</h5>
                 <ol>
-                    <a href="">
-                        <li>Help</li>
-                    </a>
-                    <a href="">
-                        <li>Tutorials</li>
-                    </a>
-                    <a href="">
-                        <li>API</li>
-                    </a>
-                    <a href="">
-                        <li>Contact</li>
-                    </a>
+                    <li><a href="">Help</a></li>
+                    <li><a href="">Tutorials</a></li>
+                    <li><a href="">API</a></li>
+                    <li><a href="">Contact</a></li>
                 </ol>
             </div>
         </section>
     </main>
     <footer>
-        <div id="socialmedia">
+        <div id="social-media">
             <a href="https://www.linkedin.com/in/gerstercristian/" target="_blank"><img
                     src="assets/Icons/LinkedIn - Negative.png" alt="LinkedIn"></a>
             <a href="https://www.facebook.com" target="_blank"><img src="assets/Icons/Facebook - Negative.png"
