BaSP-W02-2022: Fixed nomenclature issues

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -28,7 +28,7 @@
 <body>
     <aside>
         <div id="upper-aside">
-            <img src="assets/LOGO trackgenix.png" alt="Logo Trackgenix">
+            <img src="assets/logo-trackgenix.png" alt="Logo Trackgenix">
             <h2>Trackgenix</h2>
             <i class="fa-solid fa-angle-left fa-xl"></i>
         </div>
@@ -147,10 +147,10 @@
                         a type specimen book.
                     </p>
                 </div>
-                <img class="img-why-right" src="assets/producti 1.png" alt="Productivity Booster">
+                <img class="img-why-right" src="assets/productivity.png" alt="Productivity Booster">
             </div>
             <div id="traceability-section">
-                <img class="img-why-left" src="assets/work traceability.png" alt="work Traceability">
+                <img class="img-why-left" src="assets/work-traceability.png" alt="work Traceability">
                 <div class="text-why-right">
                     <h3 class="title">Work Traceability</h3>
                     <div class="subtitle-bar-right"></div>
@@ -177,10 +177,10 @@
                         ullam blanditiis dolores officia!
                     </p>
                 </div>
-                <img class="img-why-right" src="assets/liderazgo 1.png" alt="Leadership and team management">
+                <img class="img-why-right" src="assets/liderazgo.png" alt="Leadership and team management">
             </div>
             <div id="decision-making-section">
-                <img class="img-why-left" src="assets/toma de decisio 1.png" alt="Decision making">
+                <img class="img-why-left" src="assets/decision-making.png" alt="Decision making">
                 <div class="text-why-right">
                     <h3 class="title">Decision making</h3>
                     <div class="subtitle-bar-right"></div>
@@ -199,7 +199,7 @@
             <h2 class="title">Functionalities</h2>
             <div class="title-bar"></div>
             <div id="hours-log">
-                <img class="img-functionalities" src="assets/Icons/Hours Log.png" alt="Hours Log">
+                <img class="img-functionalities" src="assets/Icons/hours-log.png" alt="Hours Log">
                 <div class="text-functionalities">
                     <h4>Hours log</h4>
                     <p>
@@ -210,7 +210,7 @@
                 </div>
             </div>
             <div id="resource-management">
-                <img class="img-functionalities" src="assets/Icons/Resource Management.png" alt="Resource management">
+                <img class="img-functionalities" src="assets/Icons/resource-management.png" alt="Resource management">
                 <div class="text-functionalities">
                     <h4>Resource management</h4>
                     <p>
@@ -221,7 +221,7 @@
                 </div>
             </div>
             <div id="reports">
-                <img class="img-functionalities" src="assets/Icons/Reports.png" alt="Reports">
+                <img class="img-functionalities" src="assets/Icons/reports.png" alt="Reports">
                 <div class="text-functionalities">
                     <h4>Reports</h4>
                     <p>
@@ -232,7 +232,7 @@
                 </div>
             </div>
             <div id="multiple-roles">
-                <img class="img-functionalities" src="assets/Icons/Multiple Roles.png" alt="Multiple roles">
+                <img class="img-functionalities" src="assets/Icons/multiple-roles.png" alt="Multiple roles">
                 <div class="text-functionalities">
                     <h4>Multiple roles</h4>
                     <p>
@@ -261,8 +261,8 @@
                 <input type="text" id="email" name="email" placeholder="Your Email Here">
                 <label class="label-contact" for="message">Message</label>
                 <textarea id="message" name="message" placeholder="Your Message Here"></textarea>
-                <button type="submit" id="submitbtn"><i id="email-icon" class="fa-regular fa-envelope fa-sm"></i> Send
-                    message</button>
+                <button type="submit" id="submitbtn"><i id="email-icon" class="fa-regular fa-envelope fa-sm"></i>
+                    Send message</button>
                 <button type="reset" id="resetbtn"><i id="cross-icon" class="fa-solid fa-xmark fa-sm"></i>
                     Reset</button>
             </form>
@@ -299,16 +299,21 @@
     </main>
     <footer>
         <div id="social-media">
-            <a href="https://www.linkedin.com/in/gerstercristian/" target="_blank"><img
-                    src="assets/Icons/LinkedIn - Negative.png" alt="LinkedIn"></a>
-            <a href="https://www.facebook.com" target="_blank"><img src="assets/Icons/Facebook - Negative.png"
-                    alt="Facebook"></a>
-            <a href="https://www.twitter.com" target="_blank"><img src="assets/Icons/Twitter - Negative.png"
-                    alt="Twitter"></a>
-            <a href="https://www.instagram.com" target="_blank"><img src="assets/Icons/Instagram - Negative.png"
-                    alt="Instagram"></a>
-            <a href="https://www.github.com/ProDIGGY-vinilos" target="_blank"><img
-                    src="assets/Icons/Github - Negative.png" alt="Github"></a>
+            <a href="https://www.linkedin.com/in/gerstercristian/" target="_blank">
+                <img src="assets/Icons/LinkedIn - Negative.png" alt="LinkedIn">
+            </a>
+            <a href="https://www.facebook.com" target="_blank">
+                <img src="assets/Icons/Facebook - Negative.png" alt="Facebook">
+            </a>
+            <a href="https://www.twitter.com" target="_blank">
+                <img src="assets/Icons/Twitter - Negative.png" alt="Twitter">
+            </a>
+            <a href="https://www.instagram.com" target="_blank">
+                <img src="assets/Icons/Instagram - Negative.png" alt="Instagram">
+            </a>
+            <a href="https://www.github.com/ProDIGGY-vinilos" target="_blank">
+                <img src="assets/Icons/Github - Negative.png" alt="Github">
+            </a>
         </div>
         <h6>Rosario, Argentina</h6>
         <h6>Copyright &copy; 2022 Radium Rocket. All rights reserved</h6>
