BaSP-W02-2022: Hover effects done

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -130,7 +130,7 @@
             </p>
         </section>
         <section id="why-choose-us">
-            <div id="productivitysection">
+            <div id="productivity-section">
                 <h2 class="title">Why choose us?</h2>
                 <div class="title-bar"></div>
                 <div class="text-why-left">
@@ -199,7 +199,7 @@
             <h2 class="title">Functionalities</h2>
             <div class="title-bar"></div>
             <div id="hours-log">
-                <img class="img-functionalities" src="assets/Icons/hours-log.png" alt="Hours Log">
+                <img class="image-zoom" class="img-functionalities" src="assets/Icons/hours-log.png" alt="Hours Log">
                 <div class="text-functionalities">
                     <h4>Hours log</h4>
                     <p>
@@ -210,7 +210,7 @@
                 </div>
             </div>
             <div id="resource-management">
-                <img class="img-functionalities" src="assets/Icons/resource-management.png" alt="Resource management">
+                <img class="image-zoom" class="img-functionalities" src="assets/Icons/resource-management.png" alt="Resource management">
                 <div class="text-functionalities">
                     <h4>Resource management</h4>
                     <p>
@@ -221,7 +221,7 @@
                 </div>
             </div>
             <div id="reports">
-                <img class="img-functionalities" src="assets/Icons/reports.png" alt="Reports">
+                <img class="image-zoom" class="img-functionalities" src="assets/Icons/reports.png" alt="Reports">
                 <div class="text-functionalities">
                     <h4>Reports</h4>
                     <p>
@@ -232,7 +232,7 @@
                 </div>
             </div>
             <div id="multiple-roles">
-                <img class="img-functionalities" src="assets/Icons/multiple-roles.png" alt="Multiple roles">
+                <img class="image-zoom" class="img-functionalities" src="assets/Icons/multiple-roles.png" alt="Multiple roles">
                 <div class="text-functionalities">
                     <h4>Multiple roles</h4>
                     <p>
@@ -300,19 +300,19 @@
     <footer>
         <div id="social-media">
             <a href="https://www.linkedin.com/in/gerstercristian/" target="_blank">
-                <img src="assets/Icons/LinkedIn - Negative.png" alt="LinkedIn">
+                <img class="image-zoom-footer" src="assets/Icons/LinkedIn - Negative.png" alt="LinkedIn">
             </a>
             <a href="https://www.facebook.com" target="_blank">
-                <img src="assets/Icons/Facebook - Negative.png" alt="Facebook">
+                <img class="image-zoom-footer" src="assets/Icons/Facebook - Negative.png" alt="Facebook">
             </a>
             <a href="https://www.twitter.com" target="_blank">
-                <img src="assets/Icons/Twitter - Negative.png" alt="Twitter">
+                <img class="image-zoom-footer" src="assets/Icons/Twitter - Negative.png" alt="Twitter">
             </a>
             <a href="https://www.instagram.com" target="_blank">
-                <img src="assets/Icons/Instagram - Negative.png" alt="Instagram">
+                <img class="image-zoom-footer" src="assets/Icons/Instagram - Negative.png" alt="Instagram">
             </a>
             <a href="https://www.github.com/ProDIGGY-vinilos" target="_blank">
-                <img src="assets/Icons/Github - Negative.png" alt="Github">
+                <img class="image-zoom-footer" src="assets/Icons/Github - Negative.png" alt="Github">
             </a>
         </div>
         <h6>Rosario, Argentina</h6>
