BaSP-W03-2022: Readme updated

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -6,6 +6,7 @@
     <meta name="descripcion"
         content="This page allows employees to have a register of hours of work, rate and register their projects" />
     <meta name="author" content="Cristian Gerster" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="employee, work, reports, hours log, roles, Resource, leadership, team, management,
      traceability, Productivity, Booster" />
      <script src="https://kit.fontawesome.com/d7c9d962f7.js" crossorigin="anonymous"></script>
